# sample-computer-vision-agent

./: .gitignore  .pylintrc  README.md  cfn.yaml  pyproject.toml  requirements.txt  run_e2e.sh
application/: app.py  chat.py  info.py
application/aws_cv_mcp_server/: __init__.py  bedrock_utils.py  connections.py  cv_tools.py  models.py  scanner.py  server.py
application/image-opensearch-server/: README.md  requirements.txt  test_aoss_connection.py  test_client.py
application/image-opensearch-server/src/: server.py  util.py
application/prompts/: __init__.py  cv_agent.py  interaction_agent.py
docs/: architecture.xml
e2e/: package.json  playwright.config.js
e2e/tests/: app.spec.js
tests/: run_tests.py  test_config.py  test_cv_integration.py  test_cv_tools.py
