[project]
name = "sample-build-a-life-science-research-assistant-using-strands-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio==4.9.0",
    "arxiv==2.2.0",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.40.2",
    "botocore>=1.40.2",
    "chembl-webresource-client>=0.10.9",
    "defusedxml>=0.7.1",
    "feedparser>=6.0.11",
    "fpdf>=1.7.2",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.1",
    "mcp>=1.12.3",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytrials>=1.0.0",
    "reportlab>=4.4.3",
    "sqlalchemy>=2.0.42",
    "strands-agents>=1.3.0",
    "strands-agents-tools>=0.2.3",
    "streamlit>=1.47.1",
    "tavily-python>=0.7.10",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.1",
    "wikipedia>=1.4.0",
]
